--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "semistandard": {
+    "globals": ["Clover", "CloverError"]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sporeball/clover.git"
