--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "clo": "cli.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "semistandard": {
-    "globals": ["Clover", "CloverError"]
+    "globals": [
+      "Clover",
+      "CloverError"
+    ]
   },
   "repository": {
     "type": "git",
@@ -28,5 +31,8 @@
   "homepage": "https://github.com/sporeball/clover#readme",
   "dependencies": {
     "picocolors": "^1.0.0"
+  },
+  "devDependencies": {
+    "tentamen": "^0.4.1"
   }
 }
