--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/sporeball/Clover#readme",
   "dependencies": {
+    "dequal": "^2.0.3",
     "picocolors": "^1.0.0"
   },
   "devDependencies": {
