--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@sporeball/hss.js": "^0.1.1",
     "@sporeball/num.js": "^0.1.0",
+    "big.js": "^6.2.1",
     "dequal": "^2.0.3",
     "picocolors": "^1.0.0"
   },
